feat: Added procedures module

--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -44,7 +44,8 @@
     "@ampath/esm-patient-registration-app": "next",
     "@ampath/esm-hie-registry-manager-app": "next",
     "@ampath/esm-dha-workflow-app": "next",
-    "@kenyaemr/esm-morgue-app": "next"
+    "@kenyaemr/esm-morgue-app": "next",
+    "@kenyaemr/esm-procedure-orders-app": "next"
   },
   "excludedFrontendModules": []
 }
