Set print bill logo to ampath (#51)

--- a/frontend/configuration/config.json
+++ b/frontend/configuration/config.json
@@ -178,5 +178,11 @@
     "stockItemCategoryUUID": "97be81a0-9b2f-4a91-bc0d-7ce49fa2edb9",
     "stockSourceTypeUUID": "3bad45e5-9a6e-4732-bb77-ec73e89c4299",
     "packagingUnitsUUID": "39ae0d04-48ed-4c03-a2a8-83556065b457"
+  },
+  "@openmrs/esm-billing-app": {
+    "logo": {
+      "src": "${openmrsSpaBase}/ampath-logo.svg",
+      "alt": "AMPATH"
+    }
   }
 }
