Add esm-patient-care-workflows-app (#52)
Co-authored-by: Manu <enyachoke@ampath.org>

--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -43,7 +43,8 @@
     "@ampath/esm-patient-registration-app": "next",
     "@ampath/esm-hie-registry-manager-app": "next",
     "@ampath/esm-dha-workflow-app": "next",
-    "@ampath/esm-morgue-app": "next"
+    "@ampath/esm-morgue-app": "next",
+    "@@ampath/esm-patient-care-workflows-app": "next"
   },
   "excludedFrontendModules": []
 }
