--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -44,7 +44,7 @@
     "@ampath/esm-hie-registry-manager-app": "next",
     "@ampath/esm-dha-workflow-app": "next",
     "@ampath/esm-morgue-app": "next",
-    "@@ampath/esm-patient-care-workflows-app": "next"
+    "@ampath/esm-patient-care-workflows-app": "next"
   },
   "excludedFrontendModules": []
 }
