--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -15,7 +15,7 @@
     "@openmrs/esm-home-app": "next",
     "@openmrs/esm-implementer-tools-app": "next",
     "@openmrs/esm-laboratory-app": "next",
-    "@openmrs/esm-login-app": "next",
+    "@ampath/esm-login-app": "next",
     "@openmrs/esm-patient-allergies-app": "next",
     "@openmrs/esm-patient-attachments-app": "next",
     "@openmrs/esm-patient-banner-app": "next",
