--- a/frontend/prod-config.json
+++ b/frontend/prod-config.json
@@ -611,7 +611,6 @@
       "src": "https://ngx.ampath.or.ke/logo/logo.svg"
     },
     "showPasswordOnSeparateScreen": false,
-    "enabled": true,
-    "subDomain": "https://ngx.ampath.or.ke"
+    "enabled": true
   }
 }
