fix: updated esm-login-app configs

--- a/frontend/staging-config.json
+++ b/frontend/staging-config.json
@@ -12,12 +12,7 @@
       {
         "id": "custom",
         "name": "Demographics",
-        "fields": [
-          "maritalStatus",
-          "occupation",
-          "education",
-          "religion"
-        ]
+        "fields": ["maritalStatus", "occupation", "education", "religion"]
       },
       {
         "id": "contact",
@@ -611,7 +606,7 @@
     "hieBaseUrl": "https://staging.ampath.or.ke/hie"
   },
   "@ampath/esm-login-app": {
-    "etlBaseUrl": "/openmrs/etl",
+    "etlBaseUrl": "/etl",
     "logo": {
       "src": "https://staging.ampath.or.ke/logo/logo.svg"
     },
