--- a/frontend/prod-config.json
+++ b/frontend/prod-config.json
@@ -606,7 +606,7 @@
     "hieBaseUrl": "https://ngx.ampath.or.ke/hie"
   },
   "@ampath/esm-login-app": {
-    "etlBaseUrl": "/openmrs/etl",
+    "etlBaseUrl": "/etl",
     "logo": {
       "src": "https://ngx.ampath.or.ke/logo/logo.svg"
     },
