--- a/frontend/prod-config.json
+++ b/frontend/prod-config.json
@@ -611,6 +611,7 @@
       "src": "https://ngx.ampath.or.ke/logo/logo.svg"
     },
     "showPasswordOnSeparateScreen": false,
-    "enabled": true
+    "enabled": true,
+    "subDomain": "https://ngx.ampath.or.ke"
   }
 }
